mostly finished homepage and menu styling, fixed spacing, moving onto about page

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   display: grid;
   place-items: center;
-  margin: 10px 0;
+  margin: 30px 0;
 
   .socials>a>img {
     padding: 10px;
