--- a/css/_header.scss
+++ b/css/_header.scss
@@ -42,7 +42,7 @@ header {
       }
 
       &:checked {
-        ~.menu {
+        ~.mobile_nav {
           top: 0;
           opacity: 1;
           transition: all .5s ease-in-out;
@@ -80,7 +80,11 @@ header {
     }
   }
 
-  .menu {
+  .full_nav {
+    display: none;
+  }
+
+  .mobile_nav {
     background: url(/images/background.png);
     position: fixed;
     width: 100%;
@@ -96,6 +100,7 @@ header {
 
     .logo {
       padding-top: 10px;
+      z-index: 150;
     }
 
     #current {
@@ -109,6 +114,51 @@ header {
 
       &:hover {
         color: $mainText;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+
+  .hamburger,
+  .phone_btn {
+    display: none;
+  }
+
+  header nav {
+    position: absolute;
+    width: 90%;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    top: 20px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+
+    .full_nav {
+      // background: rgba(0, 0, 0, .6);
+      // border: 1px solid rgba(26, 26, 26, 0.6);
+      padding: 10px 0;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      justify-items: center;
+
+      a {
+        color: $secText;
+        font-weight: 800;
+        text-decoration: none;
+        text-shadow: 2px 2px 5px #000;
+        // padding-bottom: 8px;
+
+        &:hover {
+          color: $mainText;
+        }
+      }
+
+      #current1 {
+        border-bottom: 3px solid $mainText;
       }
     }
   }
