--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,10 @@ body {
   display: grid;
 }
 
+.sticky_header {
+  display: none;
+}
+
 .splash {
   position: relative;
   display: grid;
@@ -63,9 +67,11 @@ label {
     display: inline-block;
     content: '';
     margin: 20px;
+    position: relative;
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
     border-bottom: 14px solid $secText;
+    z-index: 9999;
   }
 
   >input {
@@ -77,7 +83,6 @@ label {
   }
 
   >div {
-    width: 100%;
 
     >h3 {
       color: $secText;
@@ -86,7 +91,9 @@ label {
 
     >p {
       color: $secText;
-      padding: 10px 5px;
+      padding: 0 5px;
+      padding-top: 0;
+      font-weight: bold;
     }
 
     >img {
@@ -98,9 +105,9 @@ label {
 }
 
 .empty_space {
-  height: 300px;
+  height: 280px;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 0;
 }
 
 .caro_item {
@@ -129,7 +136,7 @@ label {
 
 .map_embed {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 
   >h2 {
     @include section-header;
@@ -139,7 +146,6 @@ label {
     width: 100%;
     border: 0;
     height: 250px;
-    padding-top: 15px;
   }
 }
 
@@ -157,7 +163,7 @@ label {
 
 // Menu Page Styling
 
-.menu_splash {
+.half_splash {
   position: relative;
   display: grid;
 
@@ -170,7 +176,7 @@ label {
   }
 }
 
-.menu_container {
+.container {
   max-width: 1000px;
   margin: auto;
 }
@@ -250,7 +256,7 @@ hr {
 
   >div {
     width: 100%;
-    margin-bottom: 5px;
+    // margin-bottom: 20px;
 
     >img {
       width: 100%;
@@ -290,6 +296,47 @@ hr {
 }
 
 @media only screen and (min-width: 1000px) {
+  .sticky_header {
+    background: $altText;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    color: $secText;
+    font-size: .8rem;
+    z-index: 99999;
+
+    span {
+      color: $mainText;
+    }
+
+    .call_order {
+      justify-self: start;
+      padding-left: 10px;
+    }
+
+    .visit_order {
+      justify-self: end;
+      padding-right: 10px;
+    }
+  }
+
+  .splash {
+    margin-top: 3vh;
+
+    >img {
+      height: 97vh;
+    }
+  }
+
+  .half_splash {
+    margin-top: 3vh;
+  }
+
   .caro_box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -301,7 +348,7 @@ hr {
 
     >.caro_item {
       width: 100%;
-      height: 350px;
+      height: 325px;
       position: relative;
       top: 0;
       left: 0;
@@ -315,11 +362,19 @@ hr {
   }
 }
 
+.featured {
+  .caro_box {
+
+    >.caro_item {
+      height: 315px;
+    }
+  }
+}
+
+
 @media only screen and (max-width: 1000px) {
-  .menu_container {
+  .container {
     max-width: 550px;
     margin: auto;
   }
 }
-
-.none {}
